# Aureo

./: CONTRIBUTING.md  EXTENSIONS.md  LICENSE.md  README.md  README.zh-CN.md  RELEASING.md  electron-builder.json5  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.agent/: GOALS.md
.github/workflows/: homebrew-tap.yml  winget-releaser.yml
docs/: screen-studio-parity.md  ui-ux-certification-runbook.md
electron/: appPaths.test.ts  appPaths.ts  electron-env.d.ts  hudOverlayBounds.test.ts  hudOverlayBounds.ts  main.ts  mediaServer.test.ts  navigationPolicy.test.ts  permissionPolicy.test.ts  preload.ts  updater.ts  windows.ts
electron/extensions/: extensionIpc.ts  extensionLoader.test.ts  extensionLoader.ts  extensionMarketplace.ts
electron/ipc/: constants.ts  handlers.ts  nativeVideoExport.test.ts  nativeVideoExport.ts  (+2 more)
electron/native/nvidia-cuda-compositor/: CMakeLists.txt  run-mp4-pipeline.mjs
electron/native/nvidia-cuda-compositor/src/: main.cu
handoffs/: 2026-07-16-03-25-plan-webcam-framing-m2.md  2026-07-16-21-40-plan-webcam-m2-shipped-audio-fix.md  2026-07-17-00-59-plan-hud-clarity-autodirector-arm64-recovery.md  2026-07-19-aureo-editor-shell-slice-1.2.md  2026-07-19-aureo-production-release-roadmap.md
scripts/: after-pack-remove-xattrs.mjs  benchmark-export-queues.mjs  build-native-helpers.mjs  build-nvidia-cuda-compositor.mjs  build-windows-gpu-export.mjs  certify-electron-ui.mjs  generate-release-fixtures.mjs  launch-aureo-cuda-auto.ps1  package-electron.mjs  smoke-packaged-binaries.mjs
src/: App.tsx  index.css
(+323 files in other folders)
